tests/errors/error_semantic_type_mismatch_assign.c
int x = 10;
float f = 2.5;
x = f; // cannot assign float to int
